--- a/style/style.css
+++ b/style/style.css
@@ -367,6 +367,7 @@ body {
 
 .rec-img-1 {
     display: flex;
+    align-items: center;
 
 }
 
@@ -392,11 +393,49 @@ body {
     margin-top: 120px;
     background-color: #070211;
     width: 1700px;
-    height: 609px;
+    height: 630px;
     color: white;
 }
 
 .f-line{
-    padding-left: 100px ;
     display: flex;
+    justify-content: space-between;
+    text-align: left;
+    align-items: center;
+    padding-right: 300px;
+    padding-top: 120px;
+}
+
+.links{
+    display: flex;
+    padding: 120px 700px 0px;
+    
+}
+
+.social{
+    margin: 5px;
+    
+}
+
+.social:hover{
+    background-color: #484242;
+    width: 60px;
+    border-radius: 25px;
+}
+
+.unsubs{
+    border-radius: 25px;
+    background: rgb(8, 1, 15);
+    border: 0;
+    font-size: 15px;
+    /* font-style: normal; */
+    font-weight: 400;
+    color: white;
+    padding: 15px 35px;
+    align-items: center;
+
+}
+
+.unsubs:hover{
+    background-color: #484242;
 }
